html baiscs reviewed

--- a/HTML-basics/forms-1/index.html
+++ b/HTML-basics/forms-1/index.html
@@ -131,8 +131,8 @@
             <input type="radio" id="small" name="size">
             <label for="small">Small</label><br>
 
-            <input type="radio" id="meduim" name="size" checked>
-            <label for="meduim">Meduim</label><br>
+            <input type="radio" id="medium" name="size" checked>
+            <label for="medium">Medium</label><br>
 
             <input type="radio" id="large" name="size">
             <label for="large">Large</label><br>
