--- a/HTML-basics/forms-2/index.html
+++ b/HTML-basics/forms-2/index.html
@@ -21,7 +21,7 @@
             <h2>Date</h2>
 
             <form>
-                <label for="dob">Enetr you DOB to verify you're +10</label><br>
+                <label for="dob">Enter you DOB to verify you're +10</label><br>
                 <input type="date" id="dob" max="2011-01-01">
 
                 <input type="submit" value="SUBMIT">
@@ -72,7 +72,7 @@
             <h2>File / Tel / URL / Reset</h2>
                 file validation attribute:
                 <ul><li>accept: file_extension | audio/* | video/* | image/* | media_type</li>
-                <li>multiple: accpets multiple files</li></ul>
+                <li>multiple: accepts multiple files</li></ul>
                
                 
                 <form id="job">
@@ -102,7 +102,7 @@
             <h2>Color</h2>
                 <input type="color" value="#FFFFFF">
             <h2>Range</h2>
-            <label for="volum">Set the volume:</label><br>
+            <label for="volume">Set the volume:</label><br>
             <input type="range" id="volume" value="8" min="0" max="10">
         </section>
 
