--- a/HTML-basics/media-tables/index.html
+++ b/HTML-basics/media-tables/index.html
@@ -146,7 +146,7 @@
             <br>
             <ul>
                 <p><code>&lt;td&gt;</code> attributes:</p>
-                <li>copspan</li>
+                <li>colspan</li>
                 <li>rowspan</li>
             </ul>
 
