--- a/HTML-basics/project-fine-dine/index.html
+++ b/HTML-basics/project-fine-dine/index.html
@@ -121,10 +121,10 @@
             <label for="time">*Time of the reservation: (9 am - 10 pm)</label><br>
             <input type="time" id="time" min="09:00" max="22:00" required><br><br>
 
-            <label for="peopl">*For how many people:</label><br>
+            <label for="people">*For how many people:</label><br>
             <input type="number" id="people" min="1" max="15" required><br><br>
 
-            <label for="req">Any special requirments: (optional)</label><br>
+            <label for="req">Any special requirements: (optional)</label><br>
             <textarea id="req" cols="30" rows="5"></textarea><br><br>
 
             <input type="submit" value="BOOK MY TABLE">
