--- a/HTML-basics/text-formatting/index.html
+++ b/HTML-basics/text-formatting/index.html
@@ -18,11 +18,11 @@
             <h2>Bold Italic</h2>
             <p>
                 The following text will appear <b>BOLD</b> to highlight <b>important words</b>. <br>
-                this <i>WROD</i> is italic. <br><br>
+                this <i>WORD</i> is italic. <br><br>
             </p>
                 <h2>Semantic Tags</h2> 
                 <ul><li>Communicate with the browser and add meaning to the text. </li>
-                    <li>Imporoves accessibility. </li>
+                    <li>Improves accessibility. </li>
                 </ul>
                 &lt;em&gt; tells the browser <i>this is emphasized text</i> <br>
                 &lt;strong&gt; tells the browser <strong>this is an important text</strong>
@@ -34,9 +34,9 @@
             <h2>More Semantics</h2>
             <ul>
                 <li>
-                    &lt;blockquote&gt; allows to quote text, and cite refference. <br> 
+                    &lt;blockquote&gt; allows to quote text, and cite reference. <br> 
                     <blockquote cite="https://www.thefactsite.com/facts-about-apples/">if you plant the seeds from an apple, it will grow into a new variety.</blockquote></li>
-                    <li>&lt;p&gt; Shorter qoutes.<br> 
+                    <li>&lt;p&gt; Shorter quotes.<br> 
                     <q>To be, or not to be</q> -shakespeare
                 </li><br>
                 
@@ -86,7 +86,7 @@
             <h2>White Spacing</h2>
 
             <p>
-                Inspect the following text. Notice, new lines and extra spaces are omitted by the broswer. 
+                Inspect the following text. Notice, new lines and extra spaces are omitted by the browser. 
                 new       line
                 new       line
                 new       line
@@ -94,12 +94,12 @@
 
             <p>
                 &lt;br&gt; adds  <br> new  <br> lines <br>
-                & nbsp ;  &nbsp; &nbsp; &nbsp;Adds &nbsp; &nbsp; &nbsp; extra  &nbsp; &nbsp; &nbsp; speaces.
+                & nbsp ;  &nbsp; &nbsp; &nbsp;Adds &nbsp; &nbsp; &nbsp; extra  &nbsp; &nbsp; &nbsp; spaces.
             </p> 
 
             <h2>&lt;pre&gt;</h2>
             <pre>
-                Alernatively, use &lt;pre&gt;
+                Alternatively, use &lt;pre&gt;
                 to preserves 
                 both      spaces      and
                 line breaks
