css basics reviewed

--- a/CSS-basics/background/index.html
+++ b/CSS-basics/background/index.html
@@ -57,7 +57,7 @@
         <section>
             <h2>Background Position</h2>
             <ul>
-                <li><code>background-postition: x-axis -y-axis;</code></li>
+                <li><code>background-position: x-axis -y-axis;</code></li>
             </ul>
             <div class="grid" style="--grid:5;">
                 <div>x-axis</div>
@@ -166,7 +166,7 @@
         <section>
             <ul><li><code>background: bg-color bg-image position/bg-size bg-repeat bg-origin bg-clip bg-attachment</code></li></ul>
             <br>
-            <ul><li><code>background: #ffa05363 url(../img/img-meduim.png) center center/contain no-repeat;</code></li></ul>
+            <ul><li><code>background: #ffa05363 url(../img/img-medium.png) center center/contain no-repeat;</code></li></ul>
 
             <div id="shorthand" class="text-box">
 
