--- a/CSS-basics/colors/index.html
+++ b/CSS-basics/colors/index.html
@@ -58,7 +58,7 @@
             <div class="color" style="--color: teal;">teal</div>
             <div class="color" style="--color: aqua;">aqua</div>
             <h6 style="text-align: right;"><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/color_value">color
-                    keywords refference</a></h6>
+                    keywords reference</a></h6>
 
         </section>
         <section>
@@ -166,7 +166,7 @@
                 <div>F0</div><span class="color" style="--color: #f0f0f0;"></span>
             </div>
             <br>
-            <h4 class="title left">Hexadecimal shorthaned to 3 digits: </h4>
+            <h4 class="title left">Hexadecimal shorthanded to 3 digits: </h4>
             <div style="display: grid; grid-template-columns:40% 10% 50%; width:450px; align-items: center;">
                 <div class="color" style="--color: #000000;">#000000</div>
                 <div >→</div>
@@ -193,7 +193,7 @@
         <section>
             <h2>RGB colors</h2>
             <p>RGB Color Model: Red Green Blue</p>
-            <p>CSS function rgb(red , green , blue) accpets 3 parameters:</p>
+            <p>CSS function rgb(red , green , blue) accepts 3 parameters:</p>
             <ol>
                 <li>RED intensity: 0-255 | 0%-100%</li>
                 <li>Green intensity: 0-255 | 0%-100%</li>
@@ -219,7 +219,7 @@
         <section>
             <h2>HSL colors</h2>
             <p>HSL Colo Model: Hue Saturation Lightness </p>
-            <p>CSS function hsl(hue , saturation , lightness) accpets 3 parameters:</p>
+            <p>CSS function hsl(hue , saturation , lightness) accepts 3 parameters:</p>
 
             <ol>
                 <li >Hue: degree on the color wheel (0-360)</li>
@@ -232,7 +232,7 @@
                 <li>Saturation: how saturated or desaturated the hue is (0%-100%)</li>
                 <ul>
                     <li>100% is the full color (full saturation)</li>
-                    <li>0% is a shade of gray (completey desaturated)</li>
+                    <li>0% is a shade of gray (completely desaturated)</li>
                 </ul>
                 <li>Lightness: the brightness of the hue (0%-100%) </li>
                 <ul>
@@ -277,7 +277,7 @@
                 </ul>
 
             </ul>
-            <!-- HSL pciker -->
+            <!-- HSL picker -->
             <div id="picker">
                 <h1>Hue</h1>
                 <input type="range" min="0" step="0.1" max="360" id="hsl-h">
@@ -289,18 +289,18 @@
             </div>
 
         </section>
-        <h1 class="title">Color Transperency</h1>
+        <h1 class="title">Color Transparency</h1>
         <section>
                 <h2>Predefined color keywords</h2>
                 <div class="color" style="--color: transparent;">transparent</div>
                 <br>
-                <ul><li>use the keyword <code>transparent</code> for 100% Transperency.</li></ul>
+                <ul><li>use the keyword <code>transparent</code> for 100% Transparency.</li></ul>
 
                 
         </section>
         <section>
             <h2>Hexadecimal</h2>
-            <p>Make hexadecimal colors trasnparent by adding 2 more digit: (00 - FF)</p>
+            <p>Make hexadecimal colors transparent by adding 2 more digit: (00 - FF)</p>
             <div class="color" style="--color: #000000;">#000000</div> 0% transparent <br>
             <div class="color" style="--color: #00000080;">#00000080</div> 50% transparent <br>
             <div class="color" style="--color: #00000033;">#00000033</div> 80% transparent <br>
@@ -309,7 +309,7 @@
         </section>
         <section>
             <h2>RGB</h2>
-            <p>rgba() function, has a 4th parameter to spesify the alpha value: (0-1)</p>
+            <p>rgba() function, has a 4th parameter to specify the alpha value: (0-1)</p>
             <div class="color" style="--color: rgb(0, 0, 0);">rgb(0, 0, 0)</div> 0% transparent <br>
             <div class="color" style="--color: rgba(0, 0, 0, 0.5);">rgba(0, 0, 0, 0.5)</div> 50% transparent <br>
             <div class="color" style="--color: rgba(0, 0, 0, 0.2);">rgba(0, 0, 0, 0.2)</div> 80% transparent <br>
@@ -318,7 +318,7 @@
         </section>
         <section>
             <h2>HSL</h2>
-            <p>hsla() function, has a 4th parameter to spesify the alpha value: (0-1)</p>
+            <p>hsla() function, has a 4th parameter to specify the alpha value: (0-1)</p>
             <div class="color" style="--color: hsl(0, 0%, 0%);">hsl(0, 0%, 0%)</div> 0% transparent <br>
             <div class="color" style="--color: hsla(0, 0%, 0%, 0.5);">hsla(0, 0%, 0%, 0.5)</div> 50% transparent <br>
             <div class="color" style="--color: hsla(0, 0%, 0%, 0.2);">hsla(0, 0%, 0%, 0.2)</div> 80% transparent <br>
