--- a/CSS-basics/float/index.html
+++ b/CSS-basics/float/index.html
@@ -26,7 +26,7 @@
                 <li>Floating elements float on either left/right side.</li>
             </ul>
             <ul>
-                <li>Floating elements behave differently with BLOCK siblings than other INLING and FLOATING siblings.
+                <li>Floating elements behave differently with BLOCK siblings than other INLINE and FLOATING siblings.
                 </li>
             </ul>
         </section>
