--- a/CSS-basics/height-width/index.html
+++ b/CSS-basics/height-width/index.html
@@ -36,7 +36,7 @@
             <img src="./img/border-box.png" width="300" style="display: block; margin:auto">
 
 
-            <h2>contetn-box</h2>
+            <h2>content-box</h2>
             <p>width and heigh of an element is set while <br>
                 excluding BORDER and PADDING from the width and height.</p>
             <img src="./img/content-box.png" width="300" style="display: block; margin:auto">
@@ -80,7 +80,7 @@
         <section>
             <h2>fit-content</h2>
             <ul>
-                <li><code>width: fit-contetn;</code></li><br>
+                <li><code>width: fit-content;</code></li><br>
                 <li>Set the width to <code>fit-content</code> to force it to wrap the content.</li>
             </ul>
             <p>There're two type of elements in CSS</p>
@@ -121,7 +121,7 @@
             <li><code>min-height: [number][unit];</code></li>
             <li><code>min-width: [number][unit];</code></li>
             <br>
-            <li>spesify a minimum width/height, and allow element to grow in height or width if content increaes or if
+            <li>specify a minimum width/height, and allow element to grow in height or width if content increase or if
                 viewport
                 enlarges.</li>
             <br>
@@ -144,7 +144,7 @@
             <li><code>max-height: [number][unit];</code></li>
             <li><code>max-width: [number][unit];</code></li>
             <br>
-            <li>spesify a max width/height, and allow the element to shrink down in height or width if content or
+            <li>specify a max width/height, and allow the element to shrink down in height or width if content or
                 viewport
                 decrease.</li>
             <br>
