--- a/CSS-basics/overflow/index.html
+++ b/CSS-basics/overflow/index.html
@@ -65,7 +65,7 @@
 
         <section>
             <h2>overflow: scroll</h2>
-            <p>On some browsers, the scroll bar will be visible even if contenet isn't overflowing.</p>
+            <p>On some browsers, the scroll bar will be visible even if content isn't overflowing.</p>
             <div class="text-box" style="width:400px; height: 150px; overflow:scroll; ">
                 This element has a fixed height. <br>
                 The heigh does not grow to fit the content.
