--- a/CSS-basics/selectors/index.html
+++ b/CSS-basics/selectors/index.html
@@ -68,7 +68,7 @@
             <h2>element.class</h2>
             <ul>
                 <li><code>div.btn{...}</code></li>
-                <li>select all &lt;div&gt; elemnts with the class .btn</li>
+                <li>select all &lt;div&gt; elements with the class .btn</li>
             </ul>
 
             <h2>element#id</h2>
@@ -86,7 +86,7 @@
             <h2>.class.class</h2>
             <ul>
                 <li><code>.btn.warning{...}</code></li>
-                <li>select all elemnts having both classes .btn and .warning</li>
+                <li>select all elements having both classes .btn and .warning</li>
             </ul>
 
             <h2>.class#id</h2>
@@ -124,7 +124,7 @@
         </section>
 
         <section>
-            <h2>Selecto > Selector</h2>
+            <h2>Selector > Selector</h2>
 
             <ul>
                 <li><code>div > h1{...}</code></li>
@@ -216,7 +216,7 @@
             <h2>(even)</h2>
             <ul>
                 <li><code>:nth-child(even)</code></li>
-                <li>every elememt whose index is even</li>
+                <li>every element whose index is even</li>
             </ul>
             <div id="even" class="text-box">
                 <div class="cir"></div>
@@ -257,7 +257,7 @@
         <section>
             <h2>:hover</h2>
             <ul>
-                <li>Style applied when element is hovred over</li>
+                <li>Style applied when element is hovered over</li>
             </ul>
             <div id="hover" class="text-box">
                 Hover here.
@@ -323,10 +323,10 @@
 
         <section>
             <h2>:visited</h2>
-            <p>selects all visted links</p>
+            <p>selects all visited links</p>
 
             <h2>:link</h2>
-            <p>selects all unvisted links</p>
+            <p>selects all unvisited links</p>
 
             <ul id="links">
                 <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
