--- a/CSS-basics/typography/index.html
+++ b/CSS-basics/typography/index.html
@@ -69,7 +69,7 @@
                 <br>
                 <li>small-caps:</li>
                     <ul>
-                        <li>Converts lowercase letterrs to uppercase.</li>
+                        <li>Converts lowercase letterers to uppercase.</li>
                         <li>Previous lowercase letters appear smaller.</li>
                     </ul>
             </ul>
@@ -116,7 +116,7 @@
                 <li>fall back fonts are usually generic-family fonts, such as:</li>
                 <ul><li>sans-serif</li><li>serif</li><li>cursive</li><li>fantasy</li><li>monospace </li></ul>
             </li></ul>
-            <h6>HINT: generic-family fonts don't need to be qouted. </h6>
+            <h6>HINT: generic-family fonts don't need to be quoted. </h6>
 
             <div id="font-family" class="text-box">"Times New Roman" is the font of this text. <br>
             serif, is the fallback font.</div>
@@ -128,8 +128,8 @@
             <h2>Font Stretch </h2>
             <ul><li><code>font-stretch: ultra-condensed | extra-condensed | condensed | semi-condensed | normal | semi-expanded | expanded | extra-expanded | ultra-expanded;</code></li>
                 <br>
-                <li>Defines how streched each letter will apprear.</li>
-                <li>Only Variable fonts like "League Mono Variable" support font-strech .</li>
+                <li>Defines how stretched each letter will appear.</li>
+                <li>Only Variable fonts like "League Mono Variable" support font-stretch .</li>
                 <li>Not supported by older browsers.</li>
             </ul>
            
@@ -155,7 +155,7 @@
             <ul>
                 <li><code>text-align: left | right | center | justify;</code></li>
                 <br>
-                <li>Aligns (text) AND (children elemnts) horizontally, relative to the parent element. </li>
+                <li>Aligns (text) AND (children elements) horizontally, relative to the parent element. </li>
                 <br>
                 <li><code>text-align</code> property is assigned to the parent element.</li>
             </ul>
@@ -171,7 +171,7 @@
                 <br>
                 <li>Works only: <ul><li>with (inline) or (inline-block) elements.</li><li>And if <code>float:none</code>.</li></ul></li>
                 <br>
-                <li>Aligns (children elemnts only) (not text) vertically, relative to their other siblings (NOT parent). </li>
+                <li>Aligns (children elements only) (not text) vertically, relative to their other siblings (NOT parent). </li>
                 <br>
                 <li><code>vertical-align</code> property is assigned to each individual children (NOT to the parent)</li>
                 <br>
@@ -210,7 +210,7 @@
         </section>
 
         <section>
-            <h2>Text Tranformation</h2>
+            <h2>Text Transformation</h2>
             <ul><li><code>text-transform: none(default) | capitalize | uppercase | lowercase;</code></li></ul>
             <div id="text-transform" class="text-box">text is transformed to uppercase. </div>
 
@@ -220,7 +220,7 @@
             <ul>
                 <li>Special type of selectors. Allows to style only the first letter of the text.</li>
                 <br>
-                <li><code>selector::first-letter{ set of declerations}</code></li><br>
+                <li><code>selector::first-letter{ set of decelerations}</code></li><br>
                 <div id="first-letter" class="text-box">The first letter is blue and larger </div>
 
             </ul>
@@ -230,7 +230,7 @@
                 <ul>
                     <li>Special type of selectors. Allows to style only the first line of the text.</li>
                     <br>
-                    <li><code>selector::first-line{ set of declerations}</code></li><br>
+                    <li><code>selector::first-line{ set of decelerations}</code></li><br>
                     <div id="first-line" class="text-box">The first line is blue and larger </div>
     
                 </ul>
@@ -248,9 +248,9 @@
         <section>
             <h2>Letter Spacing</h2>
             <ul><li><code>letter-spacing: [number][unit]</code></li></ul>
-            <ul><li>spesify the tracking (spacing between letters in a word)</li></ul>
+            <ul><li>specify the tracking (spacing between letters in a word)</li></ul>
             <div id="letter-spacing1" class="text-box">Words are loose.</div><br>
-            <div id="letter-spacing2" class="text-box">Words are compact closly.</div>
+            <div id="letter-spacing2" class="text-box">Words are compact closely.</div>
 
         </section>
 
