--- a/CSS-basics/units/index.html
+++ b/CSS-basics/units/index.html
@@ -49,7 +49,7 @@
             <p>Pixels (px) are used mostly, for all measures. <br>
             Although px are fixed and will appear the same for different viewport, they are relative to the viewing device.</p>
 
-            <div id="px" class="text-box">Height, width and font-size of this box will remain the same accros all window size. </div>
+            <div id="px" class="text-box">Height, width and font-size of this box will remain the same across all window size. </div>
 
         </section>
 
