--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li><a href="./CSS-basics/units/">Units</a></li>
                 <li><a href="./CSS-basics/height-width/">Width and Height</a></li>
                 <li><a href="./CSS-basics/selectors/">Selectors</a></li>
-                <li><a href="./CSS-basics/tag-specific-properties">Tag Spesific properties</a></li>
+                <li><a href="./CSS-basics/tag-specific-properties">Tag Specific properties</a></li>
                 <li><a href="./CSS-basics/background/">Background</a></li>
                 <li><a href="./CSS-basics/display/">Display</a></li>
                 <li><a href="./CSS-basics/hiding/">Hiding Elements</a></li>
