--- a/responsive/cubic-a/index.html
+++ b/responsive/cubic-a/index.html
@@ -13,7 +13,7 @@
 
 <body>
         <div class="hide">
-                <p>IT Solutuins and Conculting</p>
+                <p>IT Solutions and Consulting</p>
             </div>
     <header>
             
