--- a/responsive/desktop-first/index.html
+++ b/responsive/desktop-first/index.html
@@ -60,8 +60,8 @@
             <h2>Illustrations</h2>
             <ul>
                 <li>Icons are informative and used to convey some visual meaning.</li>
-                <li>Unlike icons, some illustrations in the 'desktop view' are there for decorative purposes or to fillin white space.</li>
-                <li>To make the 'mobile view' less crowded, these illustrations can be illiminated.</li>
+                <li>Unlike icons, some illustrations in the 'desktop view' are there for decorative purposes or to fill in any white space.</li>
+                <li>To make the 'mobile view' less crowded, these illustrations can be eliminated.</li>
             </ul>
         </section>
     </div>
