--- a/responsive/mobile-first/index.html
+++ b/responsive/mobile-first/index.html
@@ -18,7 +18,7 @@
     <div class="container">
         <h1 class="title">Mobile First Design</h1>
         <section>
-            <p>In mobile-first desing:</p>
+            <p>In mobile-first design:</p>
             <ol>
                 <li>Layout for small screens is designed first.</li>
                 <li>Media query breakpoints for larger screens are defined later.</li>
@@ -34,7 +34,7 @@
             <h2>Large-scale Layout (grid-based)</h2>
             <ul>
                 <li>Increase the number of grid columns.</li>
-                <li>Distribuite the grid-areas or grid-items to fill multiple columns.</li>
+                <li>Distribute the grid-areas or grid-items to fill multiple columns.</li>
             </ul>
         </section>
         <section>
@@ -48,7 +48,7 @@
             <h2>Margins</h2>
             <ul>
                 <li>Be generous with margins.</li>
-                <li>When possible, ncreas the gutter (margin between elements) and the margin around the webpage edges.</li>
+                <li>When possible, increase the gutter (margin between elements) and the margin around the webpage edges.</li>
             </ul>
         </section>
         <section>
