--- a/responsive/project-1-setup/index.html
+++ b/responsive/project-1-setup/index.html
@@ -23,7 +23,7 @@
                 layout on paper first.
             </li>
             <br>
-            <li>For this project, FLEX is used to build enire layout.</li>
+            <li>For this project, FLEX is used to build the entire layout.</li>
             <br>
             <li>FLEX allows to build web pages that are responsive to large and small screen sizes. </li>
            </ul>
