--- a/ui-components/sticky-nav/index.html
+++ b/ui-components/sticky-nav/index.html
@@ -36,7 +36,7 @@
                 <img src="./img/table2.png">
 
             <div class="text">
-                <h1>Classly and Modern</h1>
+                <h1>Classy and Modern</h1>
             </div>
         </div>
     </section>
